# luaByCMake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Readme.md  UTF-8支持的可行性分析.md  autogen.lua  build_by_mingw.bat  build_by_vs.bat  build_in_linux_macos.sh  license.txt  submodulelists.txt  交叉编译说明.md  项目编译说明.md
cmake/: base.cmake  common.cmake  darwin.cmake  gnu.cmake  luaexec.cmake  lualib.cmake  mainmodule.cmake  mingw.cmake  msvc.cmake  predefined.cmake
include/: lua.h  luaconf.h
include/exforwin/: efw.h
libdemo/: CMakeLists.txt  README.md
libdemo/include/: demo.h
libdemo/src/: demo.c
lua-cjson-general/: CMakeLists.txt  README.md
lua-cjson-general/src/: lua_cjson.c
lua-exforwin-module/: demo.lua
lua-exforwin-module/src/: lua_efw.c
lua-iconv-module/: CMakeLists.txt
lua-iconv-module/include/iconv/: iconv.h
modules/: subcommon.cmake
modules/libdemo/: CMakeLists.txt
modules/lua-demo_lbc/: CMakeLists.txt
modules/lua-exforwin-module/: CMakeLists.txt
modules/lua-exforwin-module/include/: lua_efw.h
modules/lua-exforwin_lbc/: CMakeLists.txt  README.md
modules/lua-iconv-module/: CMakeLists.txt
modules/lua-iconv_lbc/: README.md
modules/lua-lfs_lbc/: CMakeLists.txt
modules/lua_cjson/: CMakeLists.txt
modules/lua_cjson/cmake/: module.cmake
modules/lua_demo/: CMakeLists.txt  README.md
modules/lua_demo/cmake/: module.cmake
modules/lua_efw/: CMakeLists.txt
modules/lua_efw/cmake/: module.cmake
modules/lua_efw/include/: loadlib_ex.h  oslib_ex.h
modules/lua_efw/src/: baselib_ex.c  efw_init.c  iolib_ex.c  loadlib_ex.c  oslib_ex.c
modules/lua_exforwin/: CMakeLists.txt  README.md
modules/lua_exforwin/include/: auxlib_ex.h  baselib_ex.h  efw.h  iolib_ex.h  loadlib_ex.h  oslib_ex.h
modules/lua_exforwin/src/: auxlib_ex.c  baselib_ex.c  efw_auxlib.c  efw_baselib.c  efw_init.c  efw_oslib.c  iolib_ex.c  oslib_ex.c
modules/lua_iconv/: CMakeLists.txt
modules/lua_iconv/cmake/: module.cmake
modules/lua_lfs/: CMakeLists.txt  README.md
modules/lua_lfs/cmake/: common.cmake  module.cmake
modules/lua_lfs/include/: lfs.h
modules/lua_lfs/src/: lfs.c
runLuaScript/: CMakeLists.txt  README.md
runLuaScript/include/: rlua.h
runLuaScript/luaRunner/: CMakeLists.txt
runLuaScript/luaRunner/include/io/: CStandardFileReader.h  ITextFileReader.hpp
runLuaScript/luaRunner/include/luarnr/: LuaRnr.h  LuaRnr_imp.h
runLuaScript/luaRunner/scripts/: main.lua
runLuaScript/luaRunner/src/: demo.cpp
runLuaScript/luaRunner/src/io/: CStandardFileReader.cpp
runLuaScript/luaRunner/src/luarnr/: LuaRnr.cpp  LuaRnr_imp.cpp
runLuaScript/luaRunner/tests/: entry.json
runLuaScript/src/: rlua.c
src/: lauxlib.c  lua.c
src/exforwin/: lauxlib.c
toolchains/: toolchain.cmake
